--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Page 1</h1>
+    <h1>Page 1 : </h1>
     <label for="Number">Entrer Un Nombre : </label>
     <input type="number" id="Number" name="Number" required>
     <button id="suivant" onclick="suivant()">Suivant</button>
