added copyright footer

--- a/page4.html
+++ b/page4.html
@@ -11,6 +11,9 @@
     <label for="Number">Entrer Un Nombre : </label>
     <input type="number" id="Number" name="Number" required>
     <button id="suivant" onclick="suivant()">Suivant</button>
+    <footer>
+        <p>&copy; 2025 James. All rights reserved.</p>
+    </footer>
     <script>
         function suivant() {
             const number = document.getElementById("Number").value;
@@ -22,5 +25,6 @@
             }
         }
     </script>
+    
 </body>
 </html>
