--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <label for="Number">Entrer Un Nombre : </label>
     <input type="number" id="Number" name="Number" required>
     <button id="suivant" onclick="suivant()">Suivant</button>
+    <footer>
+        <p>&copy; 2025 James. All rights reserved.</p>
+    </footer>
     <script>
         function suivant() {
             const number = document.getElementById("Number").value;
