--- a/page5.html
+++ b/page5.html
@@ -17,6 +17,11 @@
         const resultat = number1 + number2 + number3 + number4;
         document.getElementById("resultat").innerHTML = "La Somme Des 4 Nombres Est : " + resultat;
         localStorage.clear();
-    </script>
+    </script>ù
+    <!-- Copyright -->
+    <footer>
+        <p>&copy; 2025 James. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
