--- a/page5.html
+++ b/page5.html
@@ -17,7 +17,7 @@
         const resultat = number1 + number2 + number3 + number4;
         document.getElementById("resultat").innerHTML = "La Somme Des 4 Nombres Est : " + resultat;
         localStorage.clear();
-    </script>ù
+    </script>
     <!-- Copyright -->
     <footer>
         <p>&copy; 2025 James. All rights reserved.</p>
