copyright changed to ayoub

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="number" id="Number" name="Number" required>
     <button id="suivant" onclick="suivant()">Suivant</button>
     <footer>
-        <p>&copy; 2025 James. All rights reserved.</p>
+        <p>&copy; 2025 Ayoub. All rights reserved.</p>
     </footer>
     <script>
         function suivant() {
