--- a/page5.html
+++ b/page5.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Page 5</h1>
     <h1 id="resultat"></h1>
+      <!-- Copyright -->
+      <footer>
+        <p>&copy; 2025 Ayoub. All rights reserved.</p>
+    </footer>
     <script>
         const number1 = parseFloat(localStorage.getItem("number1"));
         const number2 = parseFloat(localStorage.getItem("number2"));
@@ -18,10 +22,7 @@
         document.getElementById("resultat").innerHTML = "La Somme Des 4 Nombres Est : " + resultat;
         localStorage.clear();
     </script>
-    <!-- Copyright -->
-    <footer>
-        <p>&copy; 2025 James. All rights reserved.</p>
-    </footer>
+  
 
 </body>
 </html>
